# cortex-swarm

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  faq.md
examples/: demo.py
src/cortex_swarm/: __init__.py  cli.py  config.py  default_config.yaml
src/cortex_swarm/adapters/: copilot.py
src/cortex_swarm/agents/: base.py  pool.py  roles.py  router.py  swarm.py
src/cortex_swarm/council/: ranking.py  session.py  synthesis.py
src/cortex_swarm/dag/: compression.py  runner.py  types.py
src/cortex_swarm/models/: multiplier.py  registry.py
tests/: test_council.py  test_dag.py  test_edge_cases.py  test_multiplier.py  test_pool.py
