[project]
name = "cortex-swarm"
version = "0.1.0"
description = "Multi-agent orchestrator with premium concurrency control, LLM council, and drone swarm — Copilot Multiplier-aware"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "johtok" }]
keywords = ["agents", "llm", "orchestrator", "council", "copilot"]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
cortex-swarm = "cortex_swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_swarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.ruff]
target-version = "py311"
line-length = 100
